syntax = "proto3";




message InputSignal{

    optional int32 id = 1;
    repeated bool inputSignal=2;

}

message OutputSignal
{
    optional int32 id = 1;
    repeated bool outputSignal=2;

}